# resvg-jni

./: README.md  pom.xml
rust/: Cargo.toml
rust/src/: lib.rs  render.rs  render_option.rs
src/main/java/me/aloic/: ResvgJNI.java
