[package]
name = "resvg-jni"
version = "0.1.0"
edition = "2021"

[lib]
name = "resvg_jni"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.96"
resvg = { version = "0.45.0" }
roxmltree = "0.20.0"
jni = {version = "0.21.1"}
jni_fn = "0.1.2"
image = "0.25.5"


[target.'cfg(target_os = "linux")'.dependencies]
turbojpeg = { version = "1.2.2", features = ["image"] }